--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1,21 +1,94 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "4e953eeb",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "7aaf6504",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import numpy as np\n",
+    "import matplotlib.pyplot as plt\n",
+    "import seaborn as sns\n",
+    "from scipy.io import arff\n",
+    "import time\n",
+    "\n",
+    "from sklearn.experimental import enable_iterative_imputer \n",
+    "from sklearn.impute import IterativeImputer\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "from sklearn.metrics import accuracy_score, confusion_matrix, classification_report\n",
+    " \n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.model_selection import KFold\n",
+    " \n",
+    "from sklearn.feature_extraction import DictVectorizer\n",
+    "from sklearn.linear_model import LogisticRegression\n",
+    "from sklearn.metrics import roc_auc_score\n",
+    "\n",
+    "#from function import *\n",
+    "from catboost import CatBoostClassifier, Pool\n",
+    "from datetime import datetime\n",
+    "from lightgbm import LGBMClassifier\n",
+    "from sklearn.compose import ColumnTransformer\n",
+    "from sklearn.impute import SimpleImputer\n",
+    "from sklearn.discriminant_analysis import LinearDiscriminantAnalysis\n",
+    "from sklearn.ensemble import AdaBoostClassifier,RandomForestClassifier\n",
+    "\n",
+    "from sklearn.linear_model import LogisticRegression, SGDClassifier\n",
+    "from sklearn.linear_model import RidgeClassifier\n",
+    "from sklearn.metrics import accuracy_score, confusion_matrix,classification_report\n",
+    "from sklearn.metrics import confusion_matrix,precision_score,recall_score,f1_score,roc_auc_score\n",
+    "from sklearn.model_selection import train_test_split, GridSearchCV, StratifiedKFold\n",
+    "from sklearn.naive_bayes import MultinomialNB\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.neural_network import MLPClassifier\n",
+    "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.preprocessing import StandardScaler, LabelEncoder, OneHotEncoder\n",
+    "from sklearn.svm import SVC, LinearSVC\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.tree import ExtraTreeClassifier\n",
+    "from xgboost import XGBClassifier\n",
+    "from sklearn.svm import SVC\n",
+    "from sklearn.neighbors import KNeighborsClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.ensemble import GradientBoostingClassifier"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "e018195a",
-   "metadata": {
-    "vscode": {
-     "languageId": "plaintext"
-    }
-   },
+   "metadata": {},
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.6"
   }
  },
  "nbformat": 4,
