--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -64,9 +64,406 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "f61f5bbe",
+   "metadata": {},
+   "source": [
+    "# Load Data set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "e018195a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = pd.read_csv('.\\data\\global_sports_footwear_sales_2018_2026.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "3932a2d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>order_id</th>\n",
+       "      <th>order_date</th>\n",
+       "      <th>brand</th>\n",
+       "      <th>model_name</th>\n",
+       "      <th>category</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>size</th>\n",
+       "      <th>color</th>\n",
+       "      <th>base_price_usd</th>\n",
+       "      <th>discount_percent</th>\n",
+       "      <th>final_price_usd</th>\n",
+       "      <th>units_sold</th>\n",
+       "      <th>revenue_usd</th>\n",
+       "      <th>payment_method</th>\n",
+       "      <th>sales_channel</th>\n",
+       "      <th>country</th>\n",
+       "      <th>customer_income_level</th>\n",
+       "      <th>customer_rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>ORD100000</td>\n",
+       "      <td>2021-01-30</td>\n",
+       "      <td>ASICS</td>\n",
+       "      <td>Model-370</td>\n",
+       "      <td>Running</td>\n",
+       "      <td>Unisex</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>162</td>\n",
+       "      <td>15</td>\n",
+       "      <td>137.7</td>\n",
+       "      <td>1</td>\n",
+       "      <td>137.7</td>\n",
+       "      <td>Card</td>\n",
+       "      <td>Retail Store</td>\n",
+       "      <td>Germany</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>4.6</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>ORD100001</td>\n",
+       "      <td>2026-10-05</td>\n",
+       "      <td>Reebok</td>\n",
+       "      <td>Model-314</td>\n",
+       "      <td>Lifestyle</td>\n",
+       "      <td>Men</td>\n",
+       "      <td>8</td>\n",
+       "      <td>Grey</td>\n",
+       "      <td>80</td>\n",
+       "      <td>5</td>\n",
+       "      <td>76.0</td>\n",
+       "      <td>3</td>\n",
+       "      <td>228.0</td>\n",
+       "      <td>Card</td>\n",
+       "      <td>Online</td>\n",
+       "      <td>USA</td>\n",
+       "      <td>Low</td>\n",
+       "      <td>3.9</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "    order_id  order_date   brand model_name   category  gender  size  color  \\\n",
+       "0  ORD100000  2021-01-30   ASICS  Model-370    Running  Unisex     8  Black   \n",
+       "1  ORD100001  2026-10-05  Reebok  Model-314  Lifestyle     Men     8   Grey   \n",
+       "\n",
+       "   base_price_usd  discount_percent  final_price_usd  units_sold  revenue_usd  \\\n",
+       "0             162                15            137.7           1        137.7   \n",
+       "1              80                 5             76.0           3        228.0   \n",
+       "\n",
+       "  payment_method sales_channel  country customer_income_level  customer_rating  \n",
+       "0           Card  Retail Store  Germany                   Low              4.6  \n",
+       "1           Card        Online      USA                   Low              3.9  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "ed960efa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(30000, 18)"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "a2144a4e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 30000 entries, 0 to 29999\n",
+      "Data columns (total 18 columns):\n",
+      " #   Column                 Non-Null Count  Dtype  \n",
+      "---  ------                 --------------  -----  \n",
+      " 0   order_id               30000 non-null  object \n",
+      " 1   order_date             30000 non-null  object \n",
+      " 2   brand                  30000 non-null  object \n",
+      " 3   model_name             30000 non-null  object \n",
+      " 4   category               30000 non-null  object \n",
+      " 5   gender                 30000 non-null  object \n",
+      " 6   size                   30000 non-null  int64  \n",
+      " 7   color                  30000 non-null  object \n",
+      " 8   base_price_usd         30000 non-null  int64  \n",
+      " 9   discount_percent       30000 non-null  int64  \n",
+      " 10  final_price_usd        30000 non-null  float64\n",
+      " 11  units_sold             30000 non-null  int64  \n",
+      " 12  revenue_usd            30000 non-null  float64\n",
+      " 13  payment_method         30000 non-null  object \n",
+      " 14  sales_channel          30000 non-null  object \n",
+      " 15  country                30000 non-null  object \n",
+      " 16  customer_income_level  30000 non-null  object \n",
+      " 17  customer_rating        30000 non-null  float64\n",
+      "dtypes: float64(3), int64(4), object(11)\n",
+      "memory usage: 4.1+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "79bb0aeb",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "order_id                 0\n",
+       "order_date               0\n",
+       "brand                    0\n",
+       "model_name               0\n",
+       "category                 0\n",
+       "gender                   0\n",
+       "size                     0\n",
+       "color                    0\n",
+       "base_price_usd           0\n",
+       "discount_percent         0\n",
+       "final_price_usd          0\n",
+       "units_sold               0\n",
+       "revenue_usd              0\n",
+       "payment_method           0\n",
+       "sales_channel            0\n",
+       "country                  0\n",
+       "customer_income_level    0\n",
+       "customer_rating          0\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.isnull().sum()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "47182b56",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>size</th>\n",
+       "      <th>base_price_usd</th>\n",
+       "      <th>discount_percent</th>\n",
+       "      <th>final_price_usd</th>\n",
+       "      <th>units_sold</th>\n",
+       "      <th>revenue_usd</th>\n",
+       "      <th>customer_rating</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>count</th>\n",
+       "      <td>30000.000000</td>\n",
+       "      <td>30000.000000</td>\n",
+       "      <td>30000.000000</td>\n",
+       "      <td>30000.000000</td>\n",
+       "      <td>30000.000000</td>\n",
+       "      <td>30000.000000</td>\n",
+       "      <td>30000.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>mean</th>\n",
+       "      <td>8.500867</td>\n",
+       "      <td>139.634633</td>\n",
+       "      <td>13.332167</td>\n",
+       "      <td>121.029035</td>\n",
+       "      <td>2.500200</td>\n",
+       "      <td>302.714948</td>\n",
+       "      <td>4.001543</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>std</th>\n",
+       "      <td>1.710896</td>\n",
+       "      <td>46.062549</td>\n",
+       "      <td>9.864198</td>\n",
+       "      <td>42.511586</td>\n",
+       "      <td>1.121149</td>\n",
+       "      <td>179.149272</td>\n",
+       "      <td>0.577546</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>min</th>\n",
+       "      <td>6.000000</td>\n",
+       "      <td>60.000000</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>42.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>42.000000</td>\n",
+       "      <td>3.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>25%</th>\n",
+       "      <td>7.000000</td>\n",
+       "      <td>100.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "      <td>85.000000</td>\n",
+       "      <td>1.000000</td>\n",
+       "      <td>156.750000</td>\n",
+       "      <td>3.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50%</th>\n",
+       "      <td>9.000000</td>\n",
+       "      <td>140.000000</td>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>119.200000</td>\n",
+       "      <td>3.000000</td>\n",
+       "      <td>268.200000</td>\n",
+       "      <td>4.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>75%</th>\n",
+       "      <td>10.000000</td>\n",
+       "      <td>180.000000</td>\n",
+       "      <td>20.000000</td>\n",
+       "      <td>153.600000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>414.000000</td>\n",
+       "      <td>4.500000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>max</th>\n",
+       "      <td>11.000000</td>\n",
+       "      <td>219.000000</td>\n",
+       "      <td>30.000000</td>\n",
+       "      <td>219.000000</td>\n",
+       "      <td>4.000000</td>\n",
+       "      <td>876.000000</td>\n",
+       "      <td>5.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "               size  base_price_usd  discount_percent  final_price_usd  \\\n",
+       "count  30000.000000    30000.000000      30000.000000     30000.000000   \n",
+       "mean       8.500867      139.634633         13.332167       121.029035   \n",
+       "std        1.710896       46.062549          9.864198        42.511586   \n",
+       "min        6.000000       60.000000          0.000000        42.000000   \n",
+       "25%        7.000000      100.000000          5.000000        85.000000   \n",
+       "50%        9.000000      140.000000         10.000000       119.200000   \n",
+       "75%       10.000000      180.000000         20.000000       153.600000   \n",
+       "max       11.000000      219.000000         30.000000       219.000000   \n",
+       "\n",
+       "         units_sold   revenue_usd  customer_rating  \n",
+       "count  30000.000000  30000.000000     30000.000000  \n",
+       "mean       2.500200    302.714948         4.001543  \n",
+       "std        1.121149    179.149272         0.577546  \n",
+       "min        1.000000     42.000000         3.000000  \n",
+       "25%        1.000000    156.750000         3.500000  \n",
+       "50%        3.000000    268.200000         4.000000  \n",
+       "75%        4.000000    414.000000         4.500000  \n",
+       "max        4.000000    876.000000         5.000000  "
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.describe()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e9b8c02e",
+   "metadata": {},
+   "source": [
+    "# Explore Data"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e018195a",
+   "id": "b75b6563",
    "metadata": {},
    "outputs": [],
    "source": []
