--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1179,8 +1179,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "id": "5f9ab7f3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# separating the feature and target columns\n",
+    "\n",
+    "# outcome\n",
+    "y = num_df['final_price_usd']\n",
+    "\n",
+    "# features\n",
+    "num_df.drop('final_price_usd', inplace = True ,axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4fd1a292",
    "metadata": {},
    "outputs": [],
    "source": []
