--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -1195,8 +1195,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "id": "4fd1a292",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# categorical variable to dummies\n",
+    "\n",
+    "cat_df = pd.get_dummies(cat_df, drop_first = True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "c1de53d4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# combining the Numerical and Categorical dataframes to get the final dataset\n",
+    "\n",
+    "X = pd.concat([num_df, cat_df], axis = 1)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "90b118b2",
+   "metadata": {},
+   "source": [
+    "# Modeling"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "f4a9fa33",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# splitting data into training set and test set\n",
+    "\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y, test_size = 0.2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "70a03492",
    "metadata": {},
    "outputs": [],
    "source": []
