--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -383,235 +383,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "id": "e018195a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df = pd.read_csv('.\\data\\global_sports_footwear_sales_2018_2026.csv')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "id": "3932a2d1",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>order_id</th>\n",
-       "      <th>order_date</th>\n",
-       "      <th>brand</th>\n",
-       "      <th>model_name</th>\n",
-       "      <th>category</th>\n",
-       "      <th>gender</th>\n",
-       "      <th>size</th>\n",
-       "      <th>color</th>\n",
-       "      <th>base_price_usd</th>\n",
-       "      <th>discount_percent</th>\n",
-       "      <th>final_price_usd</th>\n",
-       "      <th>units_sold</th>\n",
-       "      <th>revenue_usd</th>\n",
-       "      <th>payment_method</th>\n",
-       "      <th>sales_channel</th>\n",
-       "      <th>country</th>\n",
-       "      <th>customer_income_level</th>\n",
-       "      <th>customer_rating</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>ORD100000</td>\n",
-       "      <td>2021-01-30</td>\n",
-       "      <td>ASICS</td>\n",
-       "      <td>Model-370</td>\n",
-       "      <td>Running</td>\n",
-       "      <td>Unisex</td>\n",
-       "      <td>8</td>\n",
-       "      <td>Black</td>\n",
-       "      <td>162</td>\n",
-       "      <td>15</td>\n",
-       "      <td>137.7</td>\n",
-       "      <td>1</td>\n",
-       "      <td>137.7</td>\n",
-       "      <td>Card</td>\n",
-       "      <td>Retail Store</td>\n",
-       "      <td>Germany</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>4.6</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>ORD100001</td>\n",
-       "      <td>2026-10-05</td>\n",
-       "      <td>Reebok</td>\n",
-       "      <td>Model-314</td>\n",
-       "      <td>Lifestyle</td>\n",
-       "      <td>Men</td>\n",
-       "      <td>8</td>\n",
-       "      <td>Grey</td>\n",
-       "      <td>80</td>\n",
-       "      <td>5</td>\n",
-       "      <td>76.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>228.0</td>\n",
-       "      <td>Card</td>\n",
-       "      <td>Online</td>\n",
-       "      <td>USA</td>\n",
-       "      <td>Low</td>\n",
-       "      <td>3.9</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "    order_id  order_date   brand model_name   category  gender  size  color  \\\n",
-       "0  ORD100000  2021-01-30   ASICS  Model-370    Running  Unisex     8  Black   \n",
-       "1  ORD100001  2026-10-05  Reebok  Model-314  Lifestyle     Men     8   Grey   \n",
-       "\n",
-       "   base_price_usd  discount_percent  final_price_usd  units_sold  revenue_usd  \\\n",
-       "0             162                15            137.7           1        137.7   \n",
-       "1              80                 5             76.0           3        228.0   \n",
-       "\n",
-       "  payment_method sales_channel  country customer_income_level  customer_rating  \n",
-       "0           Card  Retail Store  Germany                   Low              4.6  \n",
-       "1           Card        Online      USA                   Low              3.9  "
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head(2)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "id": "ed960efa",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(30000, 18)"
-      ]
-     },
-     "execution_count": 7,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a2144a4e",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 30000 entries, 0 to 29999\n",
-      "Data columns (total 18 columns):\n",
-      " #   Column                 Non-Null Count  Dtype  \n",
-      "---  ------                 --------------  -----  \n",
-      " 0   order_id               30000 non-null  object \n",
-      " 1   order_date             30000 non-null  object \n",
-      " 2   brand                  30000 non-null  object \n",
-      " 3   model_name             30000 non-null  object \n",
-      " 4   category               30000 non-null  object \n",
-      " 5   gender                 30000 non-null  object \n",
-      " 6   size                   30000 non-null  int64  \n",
-      " 7   color                  30000 non-null  object \n",
-      " 8   base_price_usd         30000 non-null  int64  \n",
-      " 9   discount_percent       30000 non-null  int64  \n",
-      " 10  final_price_usd        30000 non-null  float64\n",
-      " 11  units_sold             30000 non-null  int64  \n",
-      " 12  revenue_usd            30000 non-null  float64\n",
-      " 13  payment_method         30000 non-null  object \n",
-      " 14  sales_channel          30000 non-null  object \n",
-      " 15  country                30000 non-null  object \n",
-      " 16  customer_income_level  30000 non-null  object \n",
-      " 17  customer_rating        30000 non-null  float64\n",
-      "dtypes: float64(3), int64(4), object(11)\n",
-      "memory usage: 4.1+ MB\n"
-     ]
-    }
-   ],
-   "source": [
-    "df.info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "id": "79bb0aeb",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "order_id                 0\n",
-       "order_date               0\n",
-       "brand                    0\n",
-       "model_name               0\n",
-       "category                 0\n",
-       "gender                   0\n",
-       "size                     0\n",
-       "color                    0\n",
-       "base_price_usd           0\n",
-       "discount_percent         0\n",
-       "final_price_usd          0\n",
-       "units_sold               0\n",
-       "revenue_usd              0\n",
-       "payment_method           0\n",
-       "sales_channel            0\n",
-       "country                  0\n",
-       "customer_income_level    0\n",
-       "customer_rating          0\n",
-       "dtype: int64"
-      ]
-     },
-     "execution_count": 10,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.isnull().sum()"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 11,
    "id": "47182b56",
    "metadata": {},
@@ -763,24 +534,100 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c9faafac",
+   "metadata": {},
+   "source": [
+    "# Data proprocessing"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 12,
-   "id": "171402eb",
+   "execution_count": 40,
+   "id": "a1109c6b",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(30000, 18)"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Dropped 'order_id' column\n",
+      "\n",
+      "Extracting date features...\n",
+      "\n",
+      "Categorical columns (9): ['brand', 'model_name', 'category', 'gender', 'color', 'payment_method', 'sales_channel', 'country', 'customer_income_level']\n",
+      "Numerical columns (11): ['size', 'base_price_usd', 'discount_percent', 'units_sold', 'revenue_usd', 'customer_rating', 'order_year', 'order_month', 'order_day', 'order_dayofweek', 'order_quarter']\n",
+      "  Encoded 'brand': 6 categories\n",
+      "  Encoded 'model_name': 899 categories\n",
+      "  Encoded 'category': 5 categories\n",
+      "  Encoded 'gender': 3 categories\n",
+      "  Encoded 'color': 5 categories\n",
+      "  Encoded 'payment_method': 4 categories\n",
+      "  Encoded 'sales_channel': 2 categories\n",
+      "  Encoded 'country': 6 categories\n",
+      "  Encoded 'customer_income_level': 3 categories\n",
+      "\n",
+      "✓ Preprocessing complete\n",
+      "  Final shape: (30000, 20)\n",
+      "  No missing values: True\n"
+     ]
     }
    ],
    "source": [
-    "df.shape"
+    "# Make a copy\n",
+    "data = df.copy()\n",
+    "\n",
+    "# Remove rows with missing target\n",
+    "if data['final_price_usd'].isnull().sum() > 0:\n",
+    "    print(f\"Removing {data['final_price_usd'].isnull().sum()} rows with missing target\")\n",
+    "    data = data[~data['final_price_usd'].isnull()]\n",
+    "\n",
+    "# Separate target and features\n",
+    "y = data['final_price_usd']\n",
+    "X = data.drop(columns=['final_price_usd'])\n",
+    "\n",
+    "# Drop non-informative columns\n",
+    "if 'order_id' in X.columns:\n",
+    "    X = X.drop(columns=['order_id'])\n",
+    "    print(\"Dropped 'order_id' column\")\n",
+    "\n",
+    "# Extract date features\n",
+    "if 'order_date' in X.columns:\n",
+    "    print(\"\\nExtracting date features...\")\n",
+    "    X['order_date'] = pd.to_datetime(X['order_date'])\n",
+    "    X['order_year'] = X['order_date'].dt.year\n",
+    "    X['order_month'] = X['order_date'].dt.month\n",
+    "    X['order_day'] = X['order_date'].dt.day\n",
+    "    X['order_dayofweek'] = X['order_date'].dt.dayofweek\n",
+    "    X['order_quarter'] = X['order_date'].dt.quarter\n",
+    "    X = X.drop(columns=['order_date'])\n",
+    "\n",
+    "# Identify column types\n",
+    "categorical_cols = X.select_dtypes(include=['object']).columns.tolist()\n",
+    "numerical_cols = X.select_dtypes(include=[np.number]).columns.tolist()\n",
+    "\n",
+    "print(f\"\\nCategorical columns ({len(categorical_cols)}): {categorical_cols}\")\n",
+    "print(f\"Numerical columns ({len(numerical_cols)}): {numerical_cols}\")\n",
+    "\n",
+    "# Encode categorical variables\n",
+    "label_encoders = {}\n",
+    "for col in categorical_cols:\n",
+    "    le = LabelEncoder()\n",
+    "    X[col] = X[col].fillna('missing')\n",
+    "    X[col] = le.fit_transform(X[col].astype(str))\n",
+    "    label_encoders[col] = le\n",
+    "    print(f\"  Encoded '{col}': {len(le.classes_)} categories\")\n",
+    "\n",
+    "# Fill missing numerical values\n",
+    "for col in numerical_cols:\n",
+    "    if X[col].isnull().sum() > 0:\n",
+    "        median_val = X[col].median()\n",
+    "        X[col] = X[col].fillna(median_val)\n",
+    "        print(f\"  Filled '{col}' with median: {median_val}\")\n",
+    "\n",
+    "print(f\"\\n✓ Preprocessing complete\")\n",
+    "print(f\"  Final shape: {X.shape}\")\n",
+    "print(f\"  No missing values: {X.isnull().sum().sum() == 0}\")"
    ]
   },
   {
@@ -1485,6 +1332,40 @@
     "    \n",
     "plt.tight_layout()\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55a3ba42",
+   "metadata": {},
+   "source": [
+    "## 3. Train-Test Split"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "aefa285c",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train set: 24000 samples\n",
+      "Test set: 6000 samples\n",
+      "Features: 20\n"
+     ]
+    }
+   ],
+   "source": [
+    "X_train, X_test, y_train, y_test = train_test_split(\n",
+    "    X, y, test_size=0.2, random_state=42\n",
+    ")\n",
+    "\n",
+    "print(f\"Train set: {X_train.shape[0]} samples\")\n",
+    "print(f\"Test set: {X_test.shape[0]} samples\")\n",
+    "print(f\"Features: {X_train.shape[1]}\")"
    ]
   },
   {
