--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 2,
    "id": "7aaf6504",
    "metadata": {},
    "outputs": [
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 3,
    "id": "3cd9b15b",
    "metadata": {},
    "outputs": [
@@ -268,7 +268,7 @@
        "4           Cash        Online      USA                Medium              3.0  "
       ]
      },
-     "execution_count": 38,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -285,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 4,
    "id": "06e36794",
    "metadata": {},
    "outputs": [
@@ -358,7 +358,7 @@
        "Name: final_price_usd, dtype: float64"
       ]
      },
-     "execution_count": 39,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -377,7 +377,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "id": "47182b56",
    "metadata": {},
    "outputs": [
@@ -518,7 +518,7 @@
        "max        4.000000    876.000000         5.000000  "
       ]
      },
-     "execution_count": 11,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -537,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 6,
    "id": "a1109c6b",
    "metadata": {},
    "outputs": [
@@ -626,6 +626,102 @@
     "print(f\"\\n✓ Preprocessing complete\")\n",
     "print(f\"  Final shape: {X.shape}\")\n",
     "print(f\"  No missing values: {X.isnull().sum().sum() == 0}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e01c9b86",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>brand</th>\n",
+       "      <th>model_name</th>\n",
+       "      <th>category</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>size</th>\n",
+       "      <th>color</th>\n",
+       "      <th>base_price_usd</th>\n",
+       "      <th>units_sold</th>\n",
+       "      <th>payment_method</th>\n",
+       "      <th>sales_channel</th>\n",
+       "      <th>country</th>\n",
+       "      <th>customer_income_level</th>\n",
+       "      <th>customer_rating</th>\n",
+       "      <th>order_year</th>\n",
+       "      <th>order_month</th>\n",
+       "      <th>order_day</th>\n",
+       "      <th>order_dayofweek</th>\n",
+       "      <th>order_quarter</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0</td>\n",
+       "      <td>270</td>\n",
+       "      <td>3</td>\n",
+       "      <td>1</td>\n",
+       "      <td>8</td>\n",
+       "      <td>0</td>\n",
+       "      <td>162</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1</td>\n",
+       "      <td>4.6</td>\n",
+       "      <td>2021</td>\n",
+       "      <td>1</td>\n",
+       "      <td>30</td>\n",
+       "      <td>5</td>\n",
+       "      <td>1</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   brand  model_name  category  gender  size  color  base_price_usd  \\\n",
+       "0      0         270         3       1     8      0             162   \n",
+       "\n",
+       "   units_sold  payment_method  sales_channel  country  customer_income_level  \\\n",
+       "0           1               1              1        0                      1   \n",
+       "\n",
+       "   customer_rating  order_year  order_month  order_day  order_dayofweek  \\\n",
+       "0              4.6        2021            1         30                5   \n",
+       "\n",
+       "   order_quarter  \n",
+       "0              1  "
+      ]
+     },
+     "execution_count": 13,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "X.head(1)"
    ]
   },
   {
@@ -2574,6 +2670,14 @@
     "\n",
     "shap.summary_plot(shap_values, X_train)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5e535812",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
